--- a/MessageBoard/MessageBoard.csproj
+++ b/MessageBoard/MessageBoard.csproj
@@ -133,11 +133,14 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TopicController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\DataContext.cs" />
+    <Compile Include="Models\DataIntializer.cs" />
+    <Compile Include="Models\Message.cs" />
     <Compile Include="Models\Topic.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -151,12 +154,27 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\global.css" />
+    <Content Include="Content\layui.css" />
+    <Content Include="Content\layui.mobile.css" />
+    <Content Include="Content\modules\code.css" />
+    <Content Include="Content\modules\laydate\default\laydate.css" />
+    <Content Include="Content\modules\layer\default\icon-ext.png" />
+    <Content Include="Content\modules\layer\default\icon.png" />
+    <Content Include="Content\modules\layer\default\layer.css" />
+    <Content Include="Content\modules\layer\default\loading-0.gif" />
+    <Content Include="Content\modules\layer\default\loading-1.gif" />
+    <Content Include="Content\modules\layer\default\loading-2.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\iconfont.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="fonts\iconfont.eot" />
+    <Content Include="fonts\iconfont.ttf" />
+    <Content Include="fonts\iconfont.woff" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -167,6 +185,27 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\layui.all.js" />
+    <Content Include="Scripts\layui.js" />
+    <Content Include="Scripts\lay\modules\carousel.js" />
+    <Content Include="Scripts\lay\modules\code.js" />
+    <Content Include="Scripts\lay\modules\colorpicker.js" />
+    <Content Include="Scripts\lay\modules\element.js" />
+    <Content Include="Scripts\lay\modules\flow.js" />
+    <Content Include="Scripts\lay\modules\form.js" />
+    <Content Include="Scripts\lay\modules\jquery.js" />
+    <Content Include="Scripts\lay\modules\laydate.js" />
+    <Content Include="Scripts\lay\modules\layedit.js" />
+    <Content Include="Scripts\lay\modules\layer.js" />
+    <Content Include="Scripts\lay\modules\laypage.js" />
+    <Content Include="Scripts\lay\modules\laytpl.js" />
+    <Content Include="Scripts\lay\modules\mobile.js" />
+    <Content Include="Scripts\lay\modules\rate.js" />
+    <Content Include="Scripts\lay\modules\slider.js" />
+    <Content Include="Scripts\lay\modules\table.js" />
+    <Content Include="Scripts\lay\modules\tree.js" />
+    <Content Include="Scripts\lay\modules\upload.js" />
+    <Content Include="Scripts\lay\modules\util.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -179,13 +218,15 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\User\Register.cshtml" />
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\User\ShowSelf.cshtml" />
     <Content Include="Views\User\EditUser.cshtml" />
+    <Content Include="Views\Shared\_MyLayout.cshtml" />
+    <Content Include="Views\Shared\_MyLayout2.cshtml" />
+    <Content Include="Views\Topic\Index.cshtml" />
+    <Content Include="Views\Topic\AddTopic.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
