修改布局页

--- a/MessageBoard/Web.config
+++ b/MessageBoard/Web.config
@@ -77,6 +77,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DataContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Program\ASP.NET\MessageBoard\MessageBoard\MessageBoard\App_Data\Database1.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DataContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Program\ASP.NET\MessageBoard\MessageBoard\App_Data\Database1.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
